<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="7dp"
    app:contentPadding="5dp"
    android:layout_margin="5dp"
    android:background="@drawable/grey_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pdf_imv1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pdf1"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/pdf_name_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:maxLines="2"
                    android:text="@string/Uni1"
                    android:textAllCaps="false"
                    android:textColor="@color/chapter_clr"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/pdf_size_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:textColor="@color/chapter_clr"
                    android:text="@string/size1" />


            </LinearLayout>
            <ImageView
                android:id="@+id/right_arrow1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back_arrow"
                android:scaleType="fitCenter"
                app:tint="@color/qury_clr" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pdf_imv3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pdf1"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/pdf_name_tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:maxLines="2"
                    android:text="@string/Uni3"
                    android:textAllCaps="false"
                    android:textColor="@color/chapter_clr"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/pdf_size_tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:textColor="@color/chapter_clr"
                    android:text="@string/size1" />


            </LinearLayout>


            <ImageView
                android:id="@+id/right_arrow3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back_arrow"
                android:scaleType="fitCenter"
                app:tint="@color/qury_clr" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pdf_imv2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pdf1"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/pdf_name_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:maxLines="2"
                    android:text="@string/Uni2"
                    android:textAllCaps="false"
                    android:textColor="@color/chapter_clr"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/pdf_size_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_medium_italic"
                    android:textColor="@color/chapter_clr"
                    android:text="@string/size1" />


            </LinearLayout>
            <ImageView
                android:id="@+id/right_arrow2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back_arrow"
                android:scaleType="fitCenter"
                app:tint="@color/qury_clr" />
        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>